[package]
name = "opensase-payments"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Payment Processing system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abiolaogu/opensase-payments"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
async-nats = "0.33"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.33", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "opensase-payments"
path = "src/main.rs"
